packages/fuel-indexer-tests/trybuild/fail_if_attribute_abi_arg_includes_invalid_type.stderr
error: Type with ident 'Ident { ident: "BadType", span: #0 bytes(217..224) }' not defined in the ABI.
 --> ../fuel-indexer-tests/trybuild/fail_if_attribute_abi_arg_includes_invalid_type.rs
  |
  | #[indexer(manifest = "packages/fuel-indexer-tests/trybuild/simple_wasm.yaml")]
  | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  |
  = note: this error originates in the attribute macro `indexer` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0433]: failed to resolve: use of undeclared crate or module `fuel`
 --> ../fuel-indexer-tests/trybuild/fail_if_attribute_abi_arg_includes_invalid_type.rs
  |
  |         header: fuel::Header {
  |                 ^^^^ use of undeclared crate or module `fuel`
  |
help: there is a crate or module with a similar name
   |
33 |         header: fuels::Header {
   |                 ~~~~~

error[E0433]: failed to resolve: use of undeclared crate or module `fuel`
 --> ../fuel-indexer-tests/trybuild/fail_if_attribute_abi_arg_includes_invalid_type.rs
  |
  |         transactions: vec![fuel::TransactionData {
  |                            ^^^^ use of undeclared crate or module `fuel`
  |
help: there is a crate or module with a similar name
   |
45 |         transactions: vec![fuels::TransactionData {
   |                            ~~~~~

error[E0433]: failed to resolve: use of undeclared crate or module `fuel`
 --> ../fuel-indexer-tests/trybuild/fail_if_attribute_abi_arg_includes_invalid_type.rs
  |
  |                 fuel::Receipt::Call {
  |                 ^^^^ use of undeclared crate or module `fuel`
  |
help: there is a crate or module with a similar name
   |
49 |                 fuels::Receipt::Call {
   |                 ~~~~~

error[E0433]: failed to resolve: use of undeclared crate or module `fuel`
 --> ../fuel-indexer-tests/trybuild/fail_if_attribute_abi_arg_includes_invalid_type.rs
  |
  |                 fuel::Receipt::ReturnData {
  |                 ^^^^ use of undeclared crate or module `fuel`
  |
help: there is a crate or module with a similar name
   |
60 |                 fuels::Receipt::ReturnData {
   |                 ~~~~~

error[E0422]: cannot find struct, variant or union type `SomeEvent` in this scope
 --> ../fuel-indexer-tests/trybuild/fail_if_attribute_abi_arg_includes_invalid_type.rs
  |
  |     let s = SomeEvent {
  |             ^^^^^^^^^ not found in this scope

error[E0412]: cannot find type `BlockData` in this scope
 --> ../fuel-indexer-tests/trybuild/fail_if_attribute_abi_arg_includes_invalid_type.rs
  |
  |     let data: Vec<BlockData> = vec![BlockData {
  |                   ^^^^^^^^^ not found in this scope
  |
help: consider importing one of these items
   |
2  | use fuel_indexer_plugin::prelude::BlockData;
   |
2  | use fuel_indexer_types::fuel::BlockData;
   |

error[E0422]: cannot find struct, variant or union type `BlockData` in this scope
 --> ../fuel-indexer-tests/trybuild/fail_if_attribute_abi_arg_includes_invalid_type.rs
  |
  |     let data: Vec<BlockData> = vec![BlockData {
  |                                     ^^^^^^^^^ not found in this scope
  |
help: consider importing one of these items
   |
2  | use fuel_indexer_plugin::prelude::BlockData;
   |
2  | use fuel_indexer_types::fuel::BlockData;
   |

error[E0433]: failed to resolve: use of undeclared crate or module `fuel`
 --> ../fuel-indexer-tests/trybuild/fail_if_attribute_abi_arg_includes_invalid_type.rs
  |
  |             status: fuel::TransactionStatusData::default(),
  |                     ^^^^ use of undeclared crate or module `fuel`
  |
help: there is a crate or module with a similar name
   |
46 |             status: fuels::TransactionStatusData::default(),
   |                     ~~~~~
help: consider importing one of these items
   |
2  | use fuel_indexer_plugin::prelude::fuel::TransactionStatusData;
   |
2  | use fuel_indexer_types::fuel::TransactionStatusData;
   |
help: if you import `TransactionStatusData`, refer to it directly
   |
46 -             status: fuel::TransactionStatusData::default(),
46 +             status: TransactionStatusData::default(),
   |

error[E0433]: failed to resolve: use of undeclared type `Transaction`
 --> ../fuel-indexer-tests/trybuild/fail_if_attribute_abi_arg_includes_invalid_type.rs
  |
  |             transaction: Transaction::default(),
  |                          ^^^^^^^^^^^ use of undeclared type `Transaction`
  |
help: consider importing one of these items
   |
2  | use fuel_indexer_plugin::prelude::fuel::Transaction;
   |
2  | use fuel_indexer_types::fuel::Transaction;
   |
2  | use fuels::prelude::Transaction;
   |
2  | use fuels::tx::Transaction;
   |
     and 1 other candidate

error[E0425]: cannot find function `serialize` in this scope
 --> ../fuel-indexer-tests/trybuild/fail_if_attribute_abi_arg_includes_invalid_type.rs
  |
  |     let mut bytes = serialize(&data);
  |                     ^^^^^^^^^ not found in this scope
  |
help: consider importing one of these items
   |
2  | use fuel_indexer_lib::utils::serialize;
   |
2  | use fuel_indexer_plugin::serialize;
   |

error[E0425]: cannot find function `handle_events` in this scope
 --> ../fuel-indexer-tests/trybuild/fail_if_attribute_abi_arg_includes_invalid_type.rs
  |
  |     handle_events(ptr, len);
  |     ^^^^^^^^^^^^^ not found in this scope

error: unused import: `fuels::types::traits::Tokenizable`
 --> ../fuel-indexer-tests/trybuild/fail_if_attribute_abi_arg_includes_invalid_type.rs
  |
  |     use fuels::types::traits::Tokenizable;
  |         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  |
  = note: `-D unused-imports` implied by `-D warnings`
